# gis-convert

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
install/: __init__.py  bootstrap.ps1  bootstrap.sh  install.py  install.sh  install_deps.py
references/: 3d-workflows.md  format-support.md
scripts/: __init__.py  bootstrap.ps1  bootstrap.sh  check_env.py  gis_convert.py  install.ps1  install.py
skills/gis-convert/: SKILL.md
tests/: test_check_env.py  test_gis_convert.py  test_install.py  test_install_deps.py  test_skill_docs.py
